--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
         C:\Windows\System32\cmd.exe /c md Resource
         cd C:\Resource
         C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/host.ps1 -OutFile host.ps1
-        C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/loop.bat -OutFile loop.bat
+        C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/loop.ps1 -OutFile loop.ps1
         C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/ngrok.exe -OutFile ngrok.exe
         C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/req.ps1 -OutFile req.ps1
         C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe Invoke-WebRequest https://raw.githubusercontent.com/FleterA4/FleterA4/main/resources/start.bat -OutFile start.bat
