--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,4 +45,4 @@ jobs:
       run: |
         cd C:\Resource
         C:
-        C:\Windows\System32\cmd.exe /c loop.bat
+        C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe .\loop.ps1
